fix: remove chisenhale directory logo on small landscape screens

--- a/style.css
+++ b/style.css
@@ -63,6 +63,10 @@ body > header {
 
   > a > img {
     max-width: -webkit-fill-available;
+
+    @media (orientation: landscape) and (max-height: 500px) {
+      display:none;
+    }
   }
 
   > nav > ul {
